[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Butnyk"]
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }